--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,15 +11,18 @@
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.ideiactivitati.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.ideiactivitati.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_lista_activitati"
+        android:name="com.example.ideiactivitati.ListaActivitatiFragment"
+        android:label="@string/lista_activitati"
+        tools:layout="@layout/fragment_lista_activitati"
+        />
+
+    <fragment
+        android:id="@+id/nav_activitate_noua"
+        android:name="com.example.ideiactivitati.ActivitateNouaFragment"
+        android:label="@string/activitate_noua"
+        tools:layout="@layout/fragment_activitate_noua"
+        />
 </navigation>
