--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.ideiactivitati.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
+    <fragment
+        android:id="@+id/nav_formular"
+        android:name="com.example.ideiactivitati.ui.formular.FormularFragment"
+        android:label="Formular"
+        tools:layout="@layout/fragment_formular"/>
 </navigation>
