--- a/app/src/main/res/layout/fragment_lista_activitati.xml
+++ b/app/src/main/res/layout/fragment_lista_activitati.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaActivitatiFragment">
+    tools:context=".ui.lista.ListaActivitatiFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activitati"
