--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,5 +27,10 @@
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_maps" />
 
+        <item
+            android:id="@+id/nav_detalii"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/detalii" />
+
     </group>
 </menu>
