--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -14,7 +14,7 @@
 
     <fragment
         android:id="@+id/nav_lista_activitati"
-        android:name="com.example.ideiactivitati.ListaActivitatiFragment"
+        android:name="com.example.ideiactivitati.ui.lista.ListaActivitatiFragment"
         android:label="@string/lista_activitati"
         tools:layout="@layout/fragment_lista_activitati"
         />
@@ -36,4 +36,10 @@
         android:name="com.example.ideiactivitati.MapsFragment"
         android:label="Maps"
         tools:layout="@layout/fragment_maps"/>
+
+    <fragment
+        android:id="@+id/nav_detalii"
+        android:name="com.example.ideiactivitati.ui.detalii.DetaliiActivitateFragment"
+        android:label="@string/detalii"
+        tools:layout="@layout/fragment_detalii_activitate"/>
 </navigation>
