--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -35,7 +35,8 @@
         android:id="@+id/nav_maps"
         android:name="com.example.ideiactivitati.ui.maps.MapsFragment"
         android:label="Maps"
-        tools:layout="@layout/fragment_maps"/>
+        tools:layout="@layout/fragment_maps">
+    </fragment>
 
     <fragment
         android:id="@+id/nav_detalii"
