--- a/app/src/main/res/layout/element_activitate.xml
+++ b/app/src/main/res/layout/element_activitate.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="5dp"
+        android:textColor="@color/white"
         android:text="@string/app_name"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginTop="5dp"
+        android:textColor="@color/white"
         android:text="tipul activitatii"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_descriere" />
