--- a/app/src/main/res/layout/fragment_grafic.xml
+++ b/app/src/main/res/layout/fragment_grafic.xml
@@ -11,21 +11,11 @@
     android:padding="16dp">
 
 
-    <com.google.android.material.textview.MaterialTextView
-        android:layout_width="380dp"
-        android:layout_height="75dp"
-        android:text="@string/bine_ati_venit"
-        android:textSize="40sp"
-        android:gravity="center_horizontal"
-        />
-
-
-    <ImageView
-        android:id="@+id/imgHome"
+    <com.github.mikephil.charting.charts.LineChart
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/welcome"
-        />
+        android:id="@+id/line_chart"
+        android:layout_marginTop="8dp" />
 
 
 </LinearLayout>
